Updated compiler plugin settings